<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etEditFirstUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/user"
            android:hint="@string/firstName"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/etEditLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/user"
            android:hint="@string/lastName"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/buttonConfirmNameChange"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/btn_check_buttonless_off"
            android:padding="10dp"
            android:text="@string/ConfirmNameChange" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonChangeEmail"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/password"
            android:padding="10dp"
            android:text="@string/password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonEditNumber"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@drawable/ic_menu_edit"
            android:padding="10dp"
            android:text="@string/editYoursContacts" />
    </LinearLayout>

</LinearLayout>