<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res/com.thiner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud_background"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/layout_top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" >

            <com.thiner.layout.CircleImageView
                android:id="@+id/imgProfileIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/profile_icon"
                android:src="@android:drawable/sym_def_app_icon"
                app1:border_color="#FFEEEEEE"
                app1:border_width="2dp" />
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/layout_top_left"
            android:layout_toRightOf="@+id/layout_top_left" >

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:hint="@string/firstName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextFirstName"
                android:layout_centerHorizontal="true"
                android:hint="@string/lastName"
                android:singleLine="true" />
            
        </RelativeLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_top"
        android:layout_centerHorizontal="true"
        android:padding="10dp" >
        
        
        <LinearLayout
            android:id="@+id/phone_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
        </LinearLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_mid"
        android:layout_centerHorizontal="true"
        android:padding="10dp" >

        <Button
            android:id="@+id/btnSaveNameChange"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_default_bg"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:padding="10dp"
            android:text="@string/saveChange"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnEditNumber"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="New password"
            android:inputType="textWebPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:visibility="invisible"
            android:textColorHint="#bbbbbb" >
        </EditText>

        <EditText
            android:id="@+id/editTextConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextNewPassword"
            android:layout_marginBottom="4dp"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="Confirm new password"
            android:inputType="textWebPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:visibility="invisible"
            android:textColorHint="#bbbbbb" >
        </EditText>

    </RelativeLayout>

</RelativeLayout>